# LCC

EDy2/: edya2.txt
EDyA2/Practica1/: ejercicio1.txt  ejes.hs  enunciados.txt
EDyA2/Practica2/: ejes.hs
EDyA2/Practica3/: ejes.hs
EDyA2/Practica4/: ej1_2_3.hs  ej4.hs  ej5.hs  ej6_7.hs
EDyA2/Practica7/: ej4.hs  ej5.hs
EDyA2/Primer_Parcial/: 2019.hs  2024.hs
EDyA2/TP1/: Heap.hs  Huffman.hs
EDyA2/arboles_lab/: tree.hs
EDyA2/practica1/: ejercicio1.txt  ejes.hs  enunciados.txt
EDyA2/practica2/: ejes.hs
EDyA2/practica3/: ejes.hs
EDyA2/practica4/: ej1_2_3.hs  ej4.hs  ej5.hs  ej6_7.hs
EDyA2/practica6/: ej1.hs  ej2.hs  ej3.hs  ej4.hs  ej5.hs
EDyA2/practica7/: ListSeq.hs  Par.hs  Seq.hs  ej1.hs  ej2.hs  ej3.hs  ej4.hs  ej5.hs  ej6.hs  ej7.hs  ej7_8_9.hs  ej8.hs
SO1/Ejemplo_Sockets/: srv
SO1/Ejemplos Sockets/: cli  socket_client_echo_datagram.c
SO1/Makefile-prod-cons/: Makefile  rwlock
SO1/Mutex/: garden3.c  main
SO1/Practica1/: ej10.c  ej2_e.c  ej2_h.c  ej7_a.c  ej7_b.c  ej7_c.c  ej8.c  ej9.c  main  minshell_profe.c  practica1.txt  server_fork.c
SO1/Practica2/: ej10.c  ej12.c  ej1_2.txt  ej5.c  ej6_7.txt  ej8.c  ej9.txt  main  parcial_ej5.c
SO1/Practica3/: ej2.c  ej2_c.c  ej3.c
SO1/Unidad1/: div0.c  ejemplo.c  ejemplo2.c  ejemplo3.c  ejemplo5.c  exec.c  fork.c  pipe.c  signal.c  wait.c
SO1/lectores-escritores/: CMakeLists.txt
SO1/mpi/: binary_file  helloworld.c
SO1/mutex/: algpet.c  deadlock.c  locks.c  mutex.c
SO1/objetos_recurrentes/: semaforo.c  stack_unbound.c  stack_unbound.h  stack_unbound_main.c
SO1/openMP/: 1_openmp.c  2_foromp_2.c  4_private.c  barreras.c  critical.c  main  reduction.c  sections.c
SO1/practica1/: ej10.c  ej2_e.c  ej2_h.c  ej7_a.c  ej7_b.c  ej7_c.c  ej8.c  ej9.c  esqueleto_servidor.c  hola.txt  minshell_profe.c  practica1.txt  server_fork.c
SO1/practica2/: ej10.c  ej12.c  ej1_2.txt  ej3.c  ej4.c  ej5.c  ej6_7.txt  ej8.c  ej9.txt  parcial_ej5.c
SO1/practica3/: ej1.txt  ej10.c  ej11.c  ej12.c  ej2_a_b.c  ej2_c.c  ej2_d.c  main  (+15 more)
(+36 files in other folders)
